add manual bonus point addition
